correcting whitespace above navbar

--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 
 html {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
     min-height: 100%;
+    position: absolute;
+    width: 100%;
 }
 
-nav {
-    margin: 20px; 
-    padding: 20px 130px 20px 130px;
+.navbar {
     height: 60px;
     width: 100%;
     display: inline;
 }
 
 .nav-left {
-    left: 50px
+    left: 50px;
 }
 
-.nav-right{
-    right: 50px
+.nav-right {
+    right: 50px;
 }
 
 .nav-left, .nav-right{
@@ -32,7 +32,7 @@ nav {
 
 .nav-left a, .nav-right a {
     display: inline;
-    margin: 30px 40px;
+    font-size: 13px;
 }
 
 .main {
